@startuml er_physical


entity User{
    *Id : INTEGER <<PK>>
    ---
    *Vorname : VARCHAR(50)
    *Nachname : VARCHAR(50)
    *PhoneNumber : VARCHAR(20)
    *MembershipId : INTEGER <<FK>>
    TrainerId : INTEGER <<FK>>
    --constraints-- 
    UNIQUE (PhoneNumber)
}

entity Workout{
    *Id : INTEGER <<PK>>
    ---
    *NumOfExercises : INTEGER
    *WorkoutDuration : TIME
    Description : VARCHAR(225)
}

entity Exercise{
    *Id : INTEGER <<PK>>
    ---
    *Name : VARCHAR(50)
    *MuscleGroup : VARCHAR(50)
    *Sets : INTEGER
    *Repetitions : INTEGER
    *ExcerciseAttributes: VARCHAR(MAX)
    OverExerciseId : INTEGER <<FK>>
    Description : VARCHAR(225)
    --constraints--
    CHECK (Sets > 0)
}

entity Trainer{
    *Id : INTEGER <<PK>>
    ---
    *Vorname : VARCHAR(50)
    *Nachname : VARCHAR(50)
    *PhoneNumber : VARCHAR(20)
    Description : VARCHAR(225)
    --constraints--
    UNIQUE(PhoneNumber)
}

entity Membership{
    *Id : INTEGER <<PK>>
    ---
    *DateOfPurchase : DATE
    *DateOfExpiry : DATE
    *Price : decimal(10,2)
}

entity UserWorkout{
    *UserId : INTEGER <<FK>>
    *WorkoutId : INTEGER <<FK>>
    ---
    *DateOfWorkout : DATE
}

User ||---o{ UserWorkout
Workout ||---o{ UserWorkout
Exercise ||..o{ Workout
Trainer ||..o{ User
Membership ||..|| Userd
Exercise ||..o{ Exercise

@enduml
